--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -3,7 +3,7 @@
   min-width: 40px;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   margin: 0;
   padding: 0;
   background-color: transparent;
@@ -33,7 +33,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 70%;
+  width: 100%;
   height: 100%;
   padding-top: 48px;
   padding-right: 40px;
@@ -45,12 +45,12 @@
   flex-direction: column;
   // justify-content: space-between;
 
-  transform: translateX(150%);
+  transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
 
 .menu-container.is-open {
-  transform: translateX(40%);
+  transform: translateX(35%);
 }
 
 .mobile-nav {
