--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,94 +1,90 @@
 .slider-buttons {
-    position: relative;
-    top: 616px;
-    left: 986px;
-    transform: translateX(0);    
+  position: absolute;
+  @media screen and (min-width: 768px) {
+    bottom: 40px;
+    left: 404px;
+  }
+
+  // transform: translateX(0);
 }
 
 .slide-one {
-    position: absolute;
-    top: -616px;
-    left: 0;
-    transform: translateX(50%);
-    pointer-events: none;
-    z-index: -20;
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
+  position: absolute;
+  top: -616px;
+  left: 0;
+  transform: translateX(50%);
+  pointer-events: none;
+  z-index: -20;
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: $timing-function;
 }
 
 .slide-two {
-     position: absolute;
-    top: -616px;
-    left: 0;
-    transform: translateX(-200%);
-    pointer-events: none;
-    z-index: -1;
-    transition-property: transform;
-    transition-duration: 500ms;
-    transition-timing-function: $timing-function;
+  position: absolute;
+  top: -616px;
+  left: 0;
+  transform: translateX(-200%);
+  pointer-events: none;
+  z-index: -1;
+  transition-property: transform;
+  transition-duration: 500ms;
+  transition-timing-function: $timing-function;
 }
 
 .list-item-back:active .slide-two {
-transform: translateX(-855px);
+  transform: translateX(-855px);
 }
 
 .list-item-forvard:active .slide-one {
-transform: translateX(-855px);
+  transform: translateX(-855px);
 }
 
 .slider-button {
-    display: flex;
+  display: flex;
+  @media screen and (min-width: 768px) {
+    width: 60px;
+  }
+  @media screen and (min-width: 1200px) {
     width: 68px;
-    height: 24px;
-    font-weight: 600;
-    font-size: 11px;
-    line-height: calc(15 / 11);
-    letter-spacing: 0.1em;
-    color: $color-main;
-    background-color: $color-free;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
-}
-
-.slider-button::after {
-    content: '';
-    display: block;
-    height: 1px;
-    background-color: $color-main;
-    margin-top: 8px;
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
+  }
+  height: 24px;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: calc(15 / 11);
+  letter-spacing: 0.1em;
+  color: $color-main;
+  background-color: $color-free;
+  border: none;
+  border-bottom: 1px solid $color-main;
+  cursor: pointer;
+  padding: 0;
+  transition-property: color, border-color;
+  transition-duration: 250ms;
+  transition-timing-function: $timing-function;
 }
 
 .slider-button__back {
-    display: block;
-    text-align: left;
-    margin-right: 22px;
+  @extend .slider-button;
+  display: block;
+  text-align: left;
+  margin-right: 22px;
 }
 
 .slider-button__forward {
-    display: block;
-    text-align: right;
+  @extend .slider-button;
+  display: block;
+  text-align: right;
 }
 
 .slider-button:hover,
 .slider-button:focus {
-    color: $color-brand;
-}
-
-.slider-button:hover::after,
-.slider-button:focus::after {
-    background-color: $color-brand;
+  color: $color-brand;
+  border-color: $color-brand;
 }
 
 .slider-pagination {
-    flex-direction: column;
+  flex-direction: column;
   position: absolute;
   top: calc(50% - 15px);
   right: 35px;
@@ -112,8 +108,8 @@ transform: translateX(-855px);
 }
 
 @media screen and (max-width: 767px) {
-    .slider-buttons,
-    .slider-pagination {
-        display: none;
-    }
+  .slider-buttons,
+  .slider-pagination {
+    display: none;
+  }
 }
