--- a/css/main.css
+++ b/css/main.css
@@ -31,9 +31,9 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .container {
-    width: 480px;
+    max-width: 480px;
     padding: 0 31px;
   }
 }
@@ -50,7 +50,7 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .section {
     padding-top: 84px;
     padding-bottom: 84px;
@@ -362,8 +362,8 @@ img {
 }
 
 .menu-container.is-open {
-  -webkit-transform: translateX(35%);
-          transform: translateX(35%);
+  -webkit-transform: translateX(20%);
+          transform: translateX(20%);
 }
 
 .mobile-nav {
@@ -500,9 +500,9 @@ img {
 }
 @media screen and (max-width: 767px) {
   .header {
-    width: 480px;
-    padding: 0 31px;
+    max-width: 480px;
     top: 48px;
+    right: 31px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -603,16 +603,6 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
 }
-@media screen and (max-width: 767px) {
-  .hero-bg {
-    background-image: url(../images/hero/hero-bg1m@1x.jpg);
-    width: 480px;
-    height: 580px;
-    position: relative;
-    top: 0;
-    left: 0;
-  }
-}
 @media screen and (min-width: 768px) {
   .hero-bg {
     background-image: url(../images/hero/hero-bg1t@1x.jpg);
@@ -631,10 +621,14 @@ img {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 479px) {
+  .hero-content {
+    padding: 0;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .hero-content {
     padding: 0 31px;
-    width: 100%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1142,7 +1136,12 @@ img {
 }
 @media screen and (max-width: 767px) {
   .media-hero {
-    width: 480px;
+    background-image: url(../images/hero/hero-bg1m@1x.jpg);
+    max-width: 480px;
+    height: 580px;
+    position: relative;
+    top: 0;
+    left: 0;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1237,7 +1236,7 @@ img {
     background-image: url(/images/services/services-d@1x.png);
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .services {
     height: 738px;
   }
@@ -1275,7 +1274,7 @@ img {
   list-style: none;
   margin: 0;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .services-list__item-all {
     font-size: 14px;
     line-height: 1.4285714286;
