--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -18,8 +18,8 @@ img {
 .container {
   margin-left: auto;
   margin-right: auto;
-  @media screen and (min-width: 480px) {
-    width: 480px;
+  @media screen and (max-width: 767px) {
+    max-width: 480px;
     padding: 0 31px;
   }
   @media screen and (min-width: 768px) {
@@ -33,7 +33,7 @@ img {
 }
 
 .section {
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 767px) {
     padding-top: 84px;
     padding-bottom: 84px;
   }
