--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,12 +1,12 @@
 .hero-bg {
-  @media screen and (max-width: 767px) {
-    background-image: url(../images/hero/hero-bg1m@1x.jpg);
-    width: 480px;
-    height: 580px;
-    position: relative;
-    top: 0;
-    left: 0;
-  }
+  // @media screen and (max-width: 767px) {
+  //   background-image: url(../images/hero/hero-bg1m@1x.jpg);
+  //   max-width: 480px;
+  //   height: 580px;
+  //   position: relative;
+  //   top: 0;
+  //   left: 0;
+  // }
   @media screen and (min-width: 768px) {
     background-image: url(../images/hero/hero-bg1t@1x.jpg);
     width: 570px;
@@ -42,12 +42,14 @@
 // }
 
 .hero-content {
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 479px) {
+    padding: 0;
+  }
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     padding: 0 31px;
-    width: 100%;
   }
   @media screen and (min-width: 768px) {
-    padding: 0 31px;    
+    padding: 0 31px;
   }
 }
 
