--- a/sass/components/_media-links.scss
+++ b/sass/components/_media-links.scss
@@ -4,7 +4,12 @@
   position: relative;
   display: flex;
   @media screen and (max-width: 767px) {
-    width: 480px;    
+    background-image: url(../images/hero/hero-bg1m@1x.jpg);
+    max-width: 480px;
+    height: 580px;
+    position: relative;
+    top: 0;
+    left: 0;   
   }
   @media screen and (min-width: 768px) {
     width: 768px;
