--- a/css/main.css
+++ b/css/main.css
@@ -1402,6 +1402,14 @@ img {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
+@media screen and (max-width: 479px) {
+  .benefits-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 20px;
+  }
+}
 
 .benefits-list__item {
   height: 133px;
@@ -1410,6 +1418,11 @@ img {
   -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   padding: 20px;
+}
+@media screen and (min-width: 320px) {
+  .benefits-list__item {
+    width: 194px;
+  }
 }
 @media screen and (min-width: 480px) {
   .benefits-list__item {
@@ -1427,17 +1440,17 @@ img {
   }
 }
 
-.benefits-list__item:nth-child(2n) {
-  margin-top: 30px;
-  margin-bottom: 0;
+@media screen and (min-width: 480px) {
+  .benefits-list__item:nth-child(2n) {
+    margin-top: 30px;
+    margin-bottom: 0;
+  }
+  .benefits-list__item:nth-child(2n+1) {
+    margin-top: 0;
+    margin-bottom: 30px;
+    margin-right: 30px;
+  }
 }
-
-.benefits-list__item:nth-child(2n+1) {
-  margin-top: 0;
-  margin-bottom: 30px;
-  margin-right: 30px;
-}
-
 .benefits-list__number {
   font-weight: 700;
   font-size: 42px;
@@ -1822,6 +1835,14 @@ textarea {
   letter-spacing: 0.2em;
   color: #303030;
 }
+@media screen and (max-width: 479px) {
+  .footer-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 
 .footer-list::before {
   content: "";
@@ -1829,6 +1850,11 @@ textarea {
   height: 1px;
   width: 60px;
   background-color: #303030;
+}
+@media screen and (max-width: 479px) {
+  .footer-list::before {
+    display: none;
+  }
 }
 
 .footer-copyright {
