--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -19,9 +19,16 @@
 
 .benefits-list {
   flex-wrap: wrap;
+  @media screen and (max-width: 479px) {
+    justify-content: center;
+    gap: 20px;
+  }
 }
 
 .benefits-list__item {
+  @media screen and (min-width: 320px) {
+    width: 194px;
+  }
   @media screen and (min-width: 480px) {
     width: 194px;
   }
@@ -38,15 +45,17 @@
   padding: 20px;
 }
 
-.benefits-list__item:nth-child(2n) {
-  margin-top: 30px;
-  margin-bottom: 0;
-}
+@media screen and (min-width: 480px) {
+  .benefits-list__item:nth-child(2n) {
+    margin-top: 30px;
+    margin-bottom: 0;
+  }
 
-.benefits-list__item:nth-child(2n + 1) {
-  margin-top: 0;
-  margin-bottom: 30px;
-  margin-right: 30px;
+  .benefits-list__item:nth-child(2n + 1) {
+    margin-top: 0;
+    margin-bottom: 30px;
+    margin-right: 30px;
+  }
 }
 
 .benefits-list__number {
