--- a/css/main.css
+++ b/css/main.css
@@ -850,10 +850,26 @@ img {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  width: 528px;
-  height: 581px;
   border-radius: 4px;
   background-color: #191c26;
+}
+@media screen and (max-width: 767px) {
+  .modal {
+    max-width: calc(100% - 30px);
+    height: 609px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .close {
@@ -903,7 +919,7 @@ img {
 }
 
 .modal-form {
-  width: 448px;
+  max-width: 448px;
   height: 342px;
   margin: 12px 40px 20px 40px;
 }
@@ -1045,7 +1061,6 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 24px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1056,6 +1071,7 @@ img {
 }
 
 .modal-checkbox__label {
+  height: 24px;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1063,10 +1079,26 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 14px;
-  line-height: 1.7142857143;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+@media screen and (max-width: 767px) {
+  .modal-checkbox__label {
+    font-size: 8px;
+    line-height: 2;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal-checkbox__label {
+    font-size: 10px;
+    line-height: 2;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal-checkbox__label {
+    font-size: 14px;
+    line-height: 1.7142857143;
+  }
 }
 
 .modal-checkbox__link {
