--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -32,9 +32,19 @@
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: $timing-function;
-
-  width: 528px;
-  height: 581px;
+@media screen and (max-width: 767px) {
+    max-width: calc(100% - 30px);
+    height: 609px;
+  }
+  @media screen and (max-width: 1199px) {
+    width: 450px;
+    height: 609px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
+  // height: 581px;
   border-radius: 4px;
   background-color: $color-contacts-bg;
 }
@@ -79,7 +89,7 @@
 }
 
 .modal-form {
-  width: 448px;
+  max-width: 448px;
   height: 342px;
   margin: 12px 40px 20px 40px;
 }
@@ -174,18 +184,29 @@
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  height: 24px;
+  
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
 }
 
 .modal-checkbox__label {
+  height: 24px;
   position: relative;
   display: flex;
   align-items: center;
-  font-size: 14px;
+  @media screen and (max-width: 767px) {
+    font-size: 8px;
+  line-height: calc(16 / 8);
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 10px;
+  line-height: calc(20 / 10);
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
   line-height: calc(24 / 14);
+  }  
   letter-spacing: 0.03em;
   color: $color-main;
 }
