--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -2,7 +2,7 @@
   display: flex;
 }
 
-.about-img {
+.about-img {  
   @media screen and (max-width: 767px) {
     display: none;
   }
@@ -10,6 +10,16 @@
     flex-direction: column;
   }
   gap: 30px;
+  @extend %list;
+}
+
+.about-img__item {
+  @media screen and (max-width: 1199px) {
+  width: 330px;
+  }
+  @media screen and (min-width: 1200px) {
+  width: 270px;
+  }
 }
 
 .about-description {
