--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -18,11 +18,18 @@
 // }
 
 .benefits-list {
-  @extend %list;
-  flex-wrap: wrap;
-  @media screen and (max-width: 479px) {
+  @extend %list; 
+   flex-wrap: wrap;
+  @media screen and (max-width: 479px) {    
     justify-content: center;
     gap: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 450px;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
   }
 }
 
@@ -85,7 +92,14 @@
 .benefits-description {
   @media screen and (max-width: 1199px) {
     order: -1;
+    width: 500px;
   }
-  // width: 500px;
+  
   // margin-right: 70px;
+}
+
+.benefits-transfer {
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
