--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -3,29 +3,38 @@
     background-image: url(/images/contacts/contacts-m@1x.png);
   }
   @media screen and (min-width: 768px) {
-    background-image: url(/images/contacts/contacts-m@1x.png);
+    background-image: url(/images/contacts/contacts-t@1x.png);
   }
   @media screen and (min-width: 1200px) {
-    background-image: url(/images/contacts/contacts-m@1x.png);
+    background-image: url(/images/contacts/contacts-d@1x.png);
   }
   background-repeat: no-repeat;
   background-position: center;
 }
 
+.contacts-adress {
+  font-style: normal;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    padding-bottom: 44px;
+  }
+  
+}
+
 .contacts {
   margin-left: auto;
   margin-right: auto;
-  @media screen and (min-width: 480px) {
-    width: 480px;
+  @media screen and (max-width: 767px) {
+    max-width: 480px;
     height: 496px;
     padding: 0 31px;
     padding-top: 84px;
     padding-bottom: 84px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {    
     width: 768px;
     height: 449px;
-    padding: 0 15px;
+    padding: 0 39px;
     padding-top: 100px;
     padding-bottom: 100px;
   }
@@ -35,19 +44,17 @@
     padding: 0 15px;
     padding-top: 130px;
     padding-bottom: 130px;
-  }
-  
-  
-  // padding-left: 100px;
-  // padding-bottom: 130px;
-  // padding-top: 130px;
+  }  
 }
 
 .contacts-list {
   margin: 0;
   padding-left: 0;
   list-style: none;
-  padding-bottom: 70px;
+  
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 330px;
+  }
 }
 
 .contacts-list__item:not(:last-child) {
@@ -55,8 +62,7 @@
 }
 
 .contacts-list__link {
-  display: flex;
-  font-style: normal;
+  display: flex;  
   font-size: 18px;
   line-height: calc(30 / 18);
   letter-spacing: 0.02em;
@@ -88,7 +94,7 @@
     }
   }
 
-.contacts__hours-title {
+.contacts-hours__title {
   display: flex;
   align-items: center;
   font-weight: 600;
@@ -100,7 +106,16 @@
   margin-bottom: 20px;
 }
 
-.contacts__hours-title::before {
+// .contacts-hours {
+//   @media screen and (min-width: 768px) and (max-width: 1199px) {
+//     width: 330px;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//   }
+// }
+
+.contacts-hours__title::before {
   content: '';
   display: block;
   height: 1px;
@@ -109,7 +124,7 @@
   margin-right: 20px;
 }
 
-.contacts__hours-time {
+.contacts-hours__time {
   font-size: 18px;
   line-height: calc(30 / 18);
   letter-spacing: 0.02em;
