--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -1,3 +1,13 @@
+.gallery-uppertitle {
+  @extend .uppertitle;
+  @media screen and (max-width: 767px) {
+    padding-bottom: 70px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-bottom: 44px;
+  } 
+}
+
 .gallery-list {
   @extend %list;
   gap: 30px;
