--- a/css/main.css
+++ b/css/main.css
@@ -471,6 +471,13 @@ img {
     left: 50px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .logo {
+    fill: #303030;
+    top: 32px;
+    left: 26px;
+  }
+}
 
 .logo:hover,
 .logo:focus {
@@ -505,8 +512,8 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .header {
-    width: 1200px;
-    padding: 0 15px;
+    width: 1022px;
+    top: 40px;
   }
 }
 
@@ -555,6 +562,11 @@ img {
 @media screen and (max-width: 1199px) {
   .header-link__phone {
     display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-link__phone {
+    margin-left: auto;
   }
 }
 
@@ -628,6 +640,12 @@ img {
     padding: 0 31px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .hero-content {
+    margin-right: auto;
+    padding: 0 98px;
+  }
+}
 
 .hero-title {
   font-family: "Raleway";
@@ -674,6 +692,12 @@ img {
   .slider-buttons {
     bottom: 40px;
     left: 404px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .slider-buttons {
+    bottom: 40px;
+    left: 882px;
   }
 }
 
@@ -1174,6 +1198,12 @@ img {
     padding: 0 39px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .media-hero {
+    width: 1200px;
+    padding: 0 15px;
+  }
+}
 
 .media {
   position: absolute;
@@ -1187,10 +1217,19 @@ img {
           transform-origin: top left;
   rotate: -90deg;
   top: 680px;
-  left: 39px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .media {
+    left: 39px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .media {
+    left: 15px;
+  }
 }
 
 .media-links {
