--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -51,6 +51,10 @@
   @media screen and (min-width: 768px) {
     padding: 0 31px;
   }
+  @media screen and (min-width: 1200px) {
+    margin-right: auto;
+    padding: 0 98px;
+  }
 }
 
 .hero-title {
