--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -12,6 +12,11 @@
     top: 32px;
     left: 50px;
   }
+  @media screen and (min-width: 1200px) {
+    fill: $color-dark;
+    top: 32px;
+    left: 26px;
+  }
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: $timing-function;
@@ -39,8 +44,8 @@
     top: 40px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1200px;
-    padding: 0 15px;
+    width: 1022px;
+    top: 40px;
   }
 }
 
@@ -78,6 +83,9 @@
   @extend .header-link;
   @media screen and (max-width: 1199px) {
     display: none;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: auto;
   }
 }
 
