--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -4,7 +4,10 @@
     bottom: 40px;
     left: 404px;
   }
-
+@media screen and (min-width: 1200px) {
+    bottom: 40px;
+    left: 882px;
+  }
   // transform: translateX(0);
 }
 
